correct placeholder opacity and alignment in payment method

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1808,7 +1808,7 @@ pre {
     opacity: 1; }
   .form-control::placeholder {
     color: #6c757d;
-    opacity: 1; }
+    opacity: 0.4; }
   .form-control:disabled, .form-control[readonly] {
     background-color: #e9ecef;
     opacity: 1; }
